--- a/android/quest/src/mpower/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/mpower/assets/configs/app/profiles/default_profile_config.json
@@ -968,10 +968,11 @@
             {
               "viewType": "LIST",
               "id": "readyTasksList",
+              "baseResource": "Task",
               "resources": [
                 {
                   "id": "availableTasks",
-                  "relatedResourceId": "availableTasks",
+                  "relatedResourceId": "task",
                   "resourceType": "Task",
                   "conditionalFhirPathExpression": "((Task.status = 'ready' or Task.status = 'cancelled' or  Task.status = 'failed') and (Task.code.empty()))"
                 }
@@ -2196,7 +2197,7 @@
           "trigger": "ON_CLICK",
           "workflow": "LAUNCH_QUESTIONNAIRE",
           "questionnaire": {
-            "id": "e5155788-8831-4916-a3f5-486915ce34b2",
+            "id": "252",
             "title": "Member registration info",
             "saveButtonText": "Update registration",
             "setPractitionerDetails": true,
@@ -2204,7 +2205,7 @@
             "type": "EDIT",
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
-              "9fac39bd-9750-4c1d-b355-1961de4e37f3"
+              "340"
             ],
             "params": [
               {
@@ -2645,11 +2646,11 @@
           "trigger": "ON_CLICK",
           "workflow": "LAUNCH_QUESTIONNAIRE",
           "questionnaire": {
-            "id": "9b22f3ed-e7e1-4222-bf72-1ced42696189",
+            "id": "343",
             "title": "Record to ANC",
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
-              "a881d53a-590c-4d52-ae0f-c87b7ff04148"
+              "346"
             ],
             "params": [
               {
@@ -2672,11 +2673,11 @@
           "trigger": "ON_CLICK",
           "workflow": "LAUNCH_QUESTIONNAIRE",
           "questionnaire": {
-            "id": "405619ff-cde8-4379-b674-0a4735098b33",
+            "id": "345",
             "title": "Pregnancy outcome",
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
-              "07200c16-b2d6-4d7d-a53f-128115b0ab2f"
+              "350"
             ]
           },
           "params": [
@@ -2741,12 +2742,12 @@
           "trigger": "ON_CLICK",
           "workflow": "LAUNCH_QUESTIONNAIRE",
           "questionnaire": {
-            "id": "4acc8776-32b0-4440-a1b1-a11a12d79acb",
+            "id": "357",
             "title": "Enroll to family planning",
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
-              "d6263f2d-2ebe-456c-bbb7-786dabd3ea22",
-              "cd39380b-2359-4b98-8ab9-df7f90fe9392"
+              "358",
+              "359"
             ]
           },
           "params": [
@@ -2904,7 +2905,7 @@
             "title": "Diseases Registration Form",
             "planDefinitions": [
               "55d89227-3a06-4a9a-b526-2819dcb1d301",
-              "d6263f2d-2ebe-456c-bbb7-786dabd3ea22"
+              "358"
             ],
             "params": [
               {
