--- a/android/quest/src/mpower/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/mpower/assets/configs/app/profiles/default_profile_config.json
@@ -968,11 +968,10 @@
             {
               "viewType": "LIST",
               "id": "readyTasksList",
-              "baseResource": "Task",
               "resources": [
                 {
                   "id": "availableTasks",
-                  "relatedResourceId": "task",
+                  "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
                   "conditionalFhirPathExpression": "((Task.status = 'ready' or Task.status = 'cancelled' or  Task.status = 'failed') and (Task.code.empty()))"
                 }
