Configure active filters
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/assets/configs/app/registers/household_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/household_register_config.json
@@ -93,6 +93,16 @@
       }
     ]
   },
+  "activeResourceFilters": [
+    {
+      "resourceType": "Group",
+      "active": "false"
+    },
+    {
+      "resourceType": "Patient",
+      "active": "true"
+    }
+  ],
   "searchBar": {
     "visible": true,
     "display": "{{ search.name.or.id }}",
