Configure pageSize to 20 on registers
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/assets/configs/app/registers/child_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/child_register_config.json
@@ -2,6 +2,7 @@
   "appId": "app",
   "configType": "register",
   "id": "childRegister",
+  "pageSize": 20,
   "fhirResource": {
     "baseResource": {
       "resource": "Patient",
