--- a/android/quest/src/main/assets/configs/app/registers/inventory_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/inventory_register_config.json
@@ -2,6 +2,7 @@
   "appId": "chss",
   "configType": "register",
   "id": "inventoryRegister",
+  "pageSize": 20,
   "pageSize": 10,
   "fhirResource": {
     "baseResource": {
