--- a/android/quest/src/main/assets/configs/app/registers/mental_health_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/mental_health_register_config.json
@@ -2,6 +2,7 @@
   "appId": "app",
   "configType": "register",
   "id": "mentalHealthRegister",
+  "pageSize": 20,
   "fhirResource": {
     "baseResource": {
       "resource": "Patient",
