--- a/android/quest/src/main/assets/configs/app/navigation_config.json
+++ b/android/quest/src/main/assets/configs/app/navigation_config.json
@@ -209,22 +209,25 @@
   },
   "staticMenu": [
     {
-      "id": "practitionerRegister",
-      "display": "CHAs",
+      "id": "taskRegister",
+      "display": "Task Register",
       "showCount": true,
       "menuIconConfig": {
-        "type": "local","reference": "ic_households"},
+        "type": "local",
+        "reference": "ic_tasks_priority"
+      },
       "actions": [
-    {
-      "trigger": "ON_CLICK",
-      "workflow": "LAUNCH_REGISTER",
-      "id": "practitionerRegister"},
-    {
-      "trigger": "ON_COUNT",
-      "id": "practitionerRegister"
-    }
-  ]
-},
+        {
+          "trigger": "ON_CLICK",
+          "workflow": "LAUNCH_REGISTER",
+          "id": "taskRegister"
+        },
+        {
+          "trigger": "ON_COUNT",
+          "id": "taskRegister"
+        }
+      ]
+    },
     {
       "id": "inventoryRegister",
       "display": "Stock Inventory",
@@ -275,22 +278,6 @@
           "trigger": "ON_CLICK",
           "workflow": "LAUNCH_REPORT",
           "id": "supplyChainMeasureReport"
-        }
-      ]
-    },
-    {
-      "id": "p2p_sync",
-      "visible": true,
-      "display": "Transfer Data",
-      "menuIconConfig": {
-        "type": "local",
-        "reference": "ic_p2p"
-      },
-      "actions": [
-        {
-          "trigger": "ON_CLICK",
-          "workflow": "DEVICE_TO_DEVICE_SYNC",
-          "id": "navigateToP2PScreen"
         }
       ]
     },
