--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -1242,7 +1242,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '0_d' and Task.executionPeriod.start > today() - 7 days"
+                  "conditionalFhirPathExpression": "Task.reasonCode.coding[0].code = 'immunization_at_birth'"
                 }
               ],
               "emptyList": {
@@ -1362,7 +1362,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '6_wk' and Task.executionPeriod.start > today() - 7 days"
+                  "conditionalFhirPathExpression": "Task.reasonCode.coding[0].code = 'immunization_at_6_weeks'"
                 }
               ],
               "emptyList": {
@@ -1482,7 +1482,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '10_wk' and Task.executionPeriod.start > today() - 7 days"
+                  "conditionalFhirPathExpression": "Task.reasonCode.coding[0].code = 'immunization_at_10_weeks'"
                 }
               ],
               "emptyList": {
@@ -1602,7 +1602,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '14_wk' and Task.executionPeriod.start > today() - 7 days"
+                  "conditionalFhirPathExpression": "Task.reasonCode.coding[0].code = 'immunization_at_14_weeks'"
                 }
               ],
               "emptyList": {
@@ -1722,7 +1722,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '9_mo' and Task.executionPeriod.start > today() - 7 days"
+                  "conditionalFhirPathExpression": "Task.reasonCode.coding[0].code = 'immunization_at_9_months'"
                 }
               ],
               "emptyList": {
@@ -1842,7 +1842,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '15_mo' and Task.executionPeriod.start > today() - 7 days"
+                  "conditionalFhirPathExpression": "Task.reasonCode.coding[0].code = 'immunization_at_15_months'"
                 }
               ],
               "emptyList": {
@@ -1962,7 +1962,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '108_mo' and Task.executionPeriod.start > today() - 7 days"
+                  "conditionalFhirPathExpression": "Task.reasonCode.coding[0].code = 'immunization_at_9_years'"
                 }
               ],
               "emptyList": {
@@ -2082,7 +2082,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '114_wk' and Task.executionPeriod.start > today() - 7 days"
+                  "conditionalFhirPathExpression": "Task.reasonCode.coding[0].code = 'immunization_at_9_half_years'"
                 }
               ],
               "emptyList": {
@@ -2865,31 +2865,6 @@
       ]
     },
     {
-      "title": "Record All",
-      "titleColor": "@{patientTextColor}",
-      "visible": "true",
-      "enabled": "true",
-      "actions": [
-        {
-          "trigger": "ON_CLICK",
-          "workflow": "LAUNCH_QUESTIONNAIRE",
-          "questionnaire": {
-            "id": "239954",
-            "resourceIdentifier": "@{patientId}",
-            "title": "Record All",
-            "params": [
-              {
-                "paramType": "UPDATE_DATE_ON_EDIT",
-                "key": "familyLogicalId",
-                "value": "@{familyLogicalId}"
-              }
-            ],
-            "refreshContent": true
-          }
-        }
-      ]
-    },
-    {
       "title": "Register with Disease",
       "titleColor": "@{patientTextColor}",
       "visible": "true",
@@ -2977,8 +2952,7 @@
                 "key": "familyLogicalId",
                 "value": "@{familyLogicalId}"
               }
-            ],
-            "refreshContent": true
+            ]
           }
         }
       ]
