--- a/android/quest/src/main/assets/configs/app/registers/household_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/household_register_config.json
@@ -43,11 +43,16 @@
     "relatedResources": [
       {
         "resource": "Patient",
+        "fhirPathExpression": "Group.member.entity",
         "isRevInclude": false,
         "searchParameter": "member",
         "relatedResources": [
           {
             "resource": "Condition",
+            "searchParameter": "subject"
+          },
+          {
+            "resource": "CarePlan",
             "searchParameter": "subject"
           },
           {
