--- a/android/quest/src/main/assets/configs/app/registers/inventory_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/inventory_register_config.json
@@ -1,9 +1,8 @@
 {
-  "appId": "chss",
+  "appId": "app",
   "configType": "register",
   "id": "inventoryRegister",
   "pageSize": 20,
-  "pageSize": 10,
   "fhirResource": {
     "baseResource": {
       "resource": "Group",
