--- a/android/quest/src/mpower/assets/configs/app/composition_config.json
+++ b/android/quest/src/mpower/assets/configs/app/composition_config.json
@@ -16,7 +16,7 @@
     ]
   },
   "date": "2022-09-16",
-  "title": "mPower",
+  "title": "fhir HA",
   "confidentiality": "L",
   "section": [
     {
