Revert "-Add familyLogicalId as groupResource in Pregnancy outcome menu"
This reverts commit 4f7a92356feecc72f4a6475caa3d4d5032939373.

--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -2677,15 +2677,11 @@
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
               "07200c16-b2d6-4d7d-a53f-128115b0ab2f"
-            ],
-            "groupResource": {
-              "groupIdentifier": "@{familyLogicalId}",
-              "memberResourceType": "Group"
-            }
+            ]
           },
           "params": [
             {
-              "paramType": "PARAMDATA",
+              "paramType": "UPDATE_DATE_ON_EDIT",
               "key": "familyLogicalId",
               "value": "@{familyLogicalId}"
             },
