Optimize register search queries (#2337)
* Refactor RegisterRepository implementation

- Use ResourceType instead of String for ResourceConfig.resource property
- Combine both SELECT and COUNT query results to RepositoryResourceData data class
- Delete sealed classes RegisterRepository.Search and RegisterRepository.Count
- Refactor rules engine implementation to use the flattened maps containing the
relevant related resources and releated resources count facts
- Reduce the number of recursive calls when getting related resources for resources
included via forward include.

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Prevent multiple retriveRelatedResources function call

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Delete unused search term

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Fix service member icon count display

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Count all related resources with one query

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Move query filters and sort functionalities to one function

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Configure active filters

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Configure pageSize to 20 on registers

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Fix search operation

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Update sample app configs

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Fix failing tests

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

* Update CHANGELOG

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

---------

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/assets/configs/app/registers/household_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/household_register_config.json
@@ -2,6 +2,7 @@
   "appId": "app",
   "configType": "register",
   "id": "householdRegister",
+  "pageSize": 20,
   "fhirResource": {
     "baseResource": {
       "resource": "Group",
@@ -42,11 +43,16 @@
     "relatedResources": [
       {
         "resource": "Patient",
+        "fhirPathExpression": "Group.member.entity",
         "isRevInclude": false,
         "searchParameter": "member",
         "relatedResources": [
           {
             "resource": "Condition",
+            "searchParameter": "subject"
+          },
+          {
+            "resource": "CarePlan",
             "searchParameter": "subject"
           },
           {
@@ -93,13 +99,22 @@
       }
     ]
   },
+  "activeResourceFilters": [
+    {
+      "resourceType": "Group",
+      "active": "false"
+    },
+    {
+      "resourceType": "Patient",
+      "active": "true"
+    }
+  ],
   "searchBar": {
     "visible": true,
     "display": "{{ search.name.or.id }}",
     "computedRules": [
       "familyName",
-      "familyId",
-      "practitionerId"
+      "familyId"
     ]
   },
   "registerCard": {
@@ -123,13 +138,6 @@
         "condition": "true",
         "actions": [
           "data.put('familyId', fhirPath.extractValue(Group, 'Group.identifier[0].value'))"
-        ]
-      },
-      {
-        "name": "practitionerId",
-        "condition": "true",
-        "actions": [
-          "data.put('practitionerId', fhirPath.extractValue(Practitioner, \"Practitioner.id.split(\"/\")[1]\"))"
         ]
       },
       {
