--- a/android/quest/src/main/assets/configs/app/registers/household_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/household_register_config.json
@@ -102,7 +102,7 @@
   "activeResourceFilters": [
     {
       "resourceType": "Group",
-      "active": "false"
+      "active": "true"
     },
     {
       "resourceType": "Patient",
