--- a/android/engine/build.gradle
+++ b/android/engine/build.gradle
@@ -200,13 +200,13 @@ dependencies {
     api('javax.xml.stream:stax-api:1.0')
     api('com.github.ben-manes.caffeine:caffeine:2.9.1')
 
-    api("org.smartregister:data-capture:1.0.0-preview4-SNAPSHOT") {
+    api("org.smartregister:data-capture:1.0.0-preview5-SNAPSHOT") {
         transitive = true
         exclude group: 'ca.uhn.hapi.fhir'
         exclude group: 'com.google.android.fhir', module: 'engine'
     }
 
-    api('org.smartregister:workflow:0.1.0-alpha02-preview9-SNAPSHOT') {
+    api('org.smartregister:workflow:0.1.0-alpha02-preview9.1-SNAPSHOT') {
         transitive = true
         exclude group: 'xerces'
         exclude group: 'com.github.java-json-tools'
@@ -229,7 +229,7 @@ dependencies {
         exclude group: 'com.google.android.fhir', module: 'engine'
     }
 
-    api('org.smartregister:engine:0.1.0-beta03-preview2.1-SNAPSHOT') {
+    api('org.smartregister:engine:0.1.0-beta03-preview3-SNAPSHOT') {
         transitive = true
         exclude group: 'com.google.android.fhir', module: 'common'
         exclude group: 'com.github.ben-manes.caffeine'
